--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,10 @@
 [project]
-name = "smart-course-recommendation-backend"
+name = "smart-course-recommendation-system"
 version = "0.1.0"
-description = "AI-powered course recommendation system backend"
+description = "AI-powered course recommendation system"
 authors = [
     {name = "Your Name", email = "your.email@example.com"}
 ]
-# readme = "README.md"  # Commented out since README.md is in parent directory
 requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.104.1",
@@ -28,6 +27,7 @@ dependencies = [
     "black>=23.11.0",
     "isort>=5.12.0",
     "flake8>=6.1.0",
+    "datasets>=4.1.0",
 ]
 
 [project.optional-dependencies]
@@ -45,7 +45,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["app"]
+packages = ["backend/app"]
 
 [tool.black]
 line-length = 88
@@ -69,10 +69,20 @@ extend-exclude = '''
 profile = "black"
 multi_line_output = 3
 line_length = 88
-known_first_party = ["app"]
+known_first_party = ["backend.app"]
 
 [tool.mypy]
 python_version = "3.11"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
+
+[tool.uv]
+dev-dependencies = [
+    "pytest>=7.4.3",
+    "pytest-asyncio>=0.21.1",
+    "black>=23.11.0",
+    "isort>=5.12.0",
+    "flake8>=6.1.0",
+    "mypy>=1.7.1",
+]
