--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,25 +9,46 @@ requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.104.1",
     "uvicorn[standard]>=0.24.0",
-    "sqlalchemy>=2.0.23",
+    "sqlalchemy>=1.4.0",
     "alembic>=1.12.1",
-    "psycopg2-binary>=2.9.9",
+    "psycopg2-binary>=2.9.0",
     "pydantic[email]>=2.5.0",
     "pydantic-settings>=2.1.0",
     "python-jose[cryptography]>=3.3.0",
     "passlib[bcrypt]>=1.7.4",
     "python-multipart>=0.0.6",
-    "python-dotenv>=1.0.0",
+    "python-dotenv>=0.19.0",
     "httpx>=0.25.2",
-    "numpy>=1.24.3",
-    "pandas>=2.0.3",
-    "scikit-learn>=1.3.2",
-    "pytest>=7.4.3",
+    "numpy>=1.24.0",
+    "pandas>=1.5.0",
+    "scikit-learn>=1.2.0",
+    "pytest>=6.2.0",
     "pytest-asyncio>=0.21.1",
     "black>=23.11.0",
     "isort>=5.12.0",
     "flake8>=6.1.0",
     "datasets>=4.1.0",
+    "torch>=2.0.0",
+    "torchvision>=0.15.0",
+    "sentence-transformers>=2.2.2",
+    "transformers>=4.30.0",
+    "nltk>=3.7",
+    "textblob>=0.17.0",
+    "scipy>=1.7.0",
+    "matplotlib>=3.5.0",
+    "seaborn>=0.11.0",
+    "python-dateutil>=2.8.0",
+    "pytz>=2021.3",
+    "tqdm>=4.62.0",
+    "joblib>=1.1.0",
+    "pyyaml>=6.0",
+    "loguru>=0.6.0",
+    "pytest-cov>=3.0.0",
+    "jupyter>=1.0.0",
+    "ipykernel>=6.0.0",
+    "spacy>=3.8.7",
+    "thinc>=8.3.6",
+    "en-core-web-sm",
 ]
 
 [project.optional-dependencies]
@@ -86,3 +107,6 @@ dev-dependencies = [
     "flake8>=6.1.0",
     "mypy>=1.7.1",
 ]
+
+[tool.uv.sources]
+en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
